--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,12 +2,55 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: Royalacid;
+  font-weight: 900;
+  src: url('../fonts/Royalacid_o.ttf') format("truetype");
+}
+
+@font-face {
+  font-family: WildBasic;
+  font-weight: 900;
+  src: url('../fonts/WildBasic.otf') format("opentype");
+}
+
+@font-face {
+  font-family: AgiesFresh;
+  font-weight: 600;
+  src: url('../fonts/AgiesFresh.otf') format("opentype");
+}
+
+@layer utilities {
+  @variants responsive {
+      .text-shadow {
+        text-shadow: 1px 1px 2px black;
+      }
+      .text-shadow-w {
+        text-shadow: 1px 1px 2px white;
+      }
+      .text-shadow-md {
+        text-shadow: 2px 2px 4px black;
+      }
+      .text-shadow-lg {
+        text-shadow: 15px 15px 30px black;
+      }
+      .text-shadow-none {
+        text-shadow: none;
+      }
+  } 
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  min-width: 320px;
+  background-color: #0e1b36;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 900'%3E%3Cg fill='none' stroke-width='1' stroke-miterlimit='10'%3E%3Cpath stroke='%233908ff' d='M162-421.4c0 0 233.2 85.5 73.6 206.1c-76.7 58.4 62.2 169.8 12.2 245.9C206.8 93.2 90.9 27.4-77.3 13C-179.4 4.3-240 79.9-240 79.9'/%3E%3Cpath stroke='%234b08fd' d='M299-392.8c0 0 248.1 102.5 72.2 238.2c-91 70.2 82.1 187.5 18.5 274.8c-55.1 75.6-217.3-10-406.3-19.3C-148.2 94.6-216 195.8-216 195.8'/%3E%3Cpath stroke='%235d07fa' d='M436-364.1c0 0 263.3 119.9 70.8 270.4c-105.3 82.3 101.8 205 24.7 303.7c-69.2 88.6-277.6-16-487.4-20.9C-116.9 185.3-192 311.7-192 311.7'/%3E%3Cpath stroke='%236e07f8' d='M573.1-335.5c0 0 278.6 137.4 69.4 302.5c-119.4 94.3 121.5 222.5 31 332.6c-83.4 101.5-337.9-21.7-568.6-22.5C-85.7 276.4-168 427.6-168 427.6'/%3E%3Cpath stroke='%238006f5' d='M710.1-306.9c0 0 293.8 154.8 68 334.6c-133.6 106.4 141.1 239.9 37.2 361.5c-97.6 114.4-398.2-27.1-649.7-24.2C-54.5 367.7-144 543.5-144 543.5'/%3E%3Cpath stroke='%239206f3' d='M847.1-278.3c0 0 309.4 172.8 66.6 366.7c-147.6 118.7 160.6 257.3 43.5 390.4c-111.9 127.2-458.5-32.4-730.8-25.8C-23.2 459.1-120 659.5-120 659.5'/%3E%3Cpath stroke='%23a406f0' d='M984.1-249.7c0 0 324.7 190.3 65.2 398.8C887.6 280 1229.5 423.8 1099 568.5c-126.2 140-518.8-37.6-812-27.4C8.1 550.8-96 775.4-96 775.4'/%3E%3Cpath stroke='%23b605ee' d='M1121.1-221c0 0 339.9 207.7 63.8 431c-175.9 142.8 199.7 292 56 448.3c-140.5 152.8-579-42.7-893.1-29.1C39.4 642.5-72 891.3-72 891.3'/%3E%3Cpath stroke='%23c705eb' d='M1258.1-192.4c0 0 355.1 225.2 62.4 463.1c-190.1 154.9 219 309 62.2 477.2c-155.2 165.3-639.3-47.7-974.3-30.7C70.7 734.3-48 1007.2-48 1007.2'/%3E%3Cpath stroke='%23d904e9' d='M1395.2-163.8c0 0 370.4 242.7 61 495.2c-204.3 167 238.6 326.5 68.5 506.1c-169.4 178.2-699.5-52.8-1055.4-32.3C102 826.3-24 1123.1-24 1123.1'/%3E%3Cpath stroke='%23eb04e6' d='M1532.2-135.2c0 0 385.6 260.1 59.6 527.3c-218.4 179 258.3 343.9 74.7 535s-759.7-57.8-1136.5-34C133.3 918.2 0 1239 0 1239'/%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 a {
@@ -17,4 +60,9 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+
+.dream {
+  background-image: url('../assets/images/dreams.jpg');
 }
